Fix some problems: button icons on header too small on mobile & need more space

--- a/01-daily-dev-clone/src/components/Article.scss
+++ b/01-daily-dev-clone/src/components/Article.scss
@@ -38,7 +38,7 @@
 
   &__img img {
     border-radius: 12px;
-    height: 142px;
+    height: 160px;
     object-fit: cover;
   }
 
