--- a/01-daily-dev-clone/src/components/FilterBtns.scss
+++ b/01-daily-dev-clone/src/components/FilterBtns.scss
@@ -16,6 +16,7 @@
   
   &__icon {
     padding: .5rem .6rem;
+    font-size: 18px;
   }
   
   &__topics button:first-child {
